# ClawQuant

./: .env.example  .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
deploy/: index.html
docs/: mcp-ask-connector.md  scheduling.md  scheduling_zh.md
docs/architecture/: multi-language.md
landing/: clawquant-mvp.html
python/: README.md  pyproject.toml
python/claw_quant/: __init__.py
python/claw_quant/learning/: __init__.py
python/claw_quant/learning/attribution/: __init__.py  buckets.py
python/claw_quant/learning/labelers/: __init__.py  trade_horizon.py
python/claw_quant/research/: __init__.py
python/claw_quant/research/backtests/: __init__.py  simple_equity.py
python/claw_quant/research/benchmarks/: __init__.py  compare.py
python/claw_quant/research/replays/: __init__.py  ohlcv_frames.py
python/tests/: test_labelers.py
rust/: Cargo.toml
rust/indicator-engine/: Cargo.toml
rust/indicator-engine/src/: lib.rs
rust/replay-core/: Cargo.toml
rust/replay-core/src/: lib.rs
src/claw-browser/agents/: agent-scope.ts
src/claw-browser/browser/: client-fetch.ts  config.ts  control-auth.ts  extension-relay.ts  profiles-service.ts  server-context.ts
src/claw-browser/config/: config.ts  paths.ts  types.ts
src/claw-browser/gateway/: call.ts
src/claw-browser/infra/: ports.ts  tailscale.ts
src/claw-browser/logging/: config.ts  console.ts  logger.ts  redact.ts
src/connectors/mcp-ask/: mcp-ask-plugin.ts
src/core/: media.ts
src/extension/browser/: adapter.ts
src/plugins/: mcp.ts
ui/: package.json
(+3 files in other folders)
