[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "claw-quant"
version = "0.1.0"
description = "ClawQuant research, learning, and evaluation pipelines (Python)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "MAVtechdev" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.hatch.build.targets.wheel]
packages = ["claw_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
